--- a/web-server/public/css/style.css
+++ b/web-server/public/css/style.css
@@ -28,6 +28,15 @@ body {
   height: 10vh;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
 .main-col {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(../image/weather.jpg);
