--- a/web-server/template/partials/footer.hbs
+++ b/web-server/template/partials/footer.hbs
@@ -9,5 +9,16 @@
     crossorigin="anonymous"></script>
 <script src="/js/test.js"></script>
 </body>
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright
+        <p> Ahmed Abdulrazzaq</p>
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
 </html>
