--- a/web-server/template/partials/header.hbs
+++ b/web-server/template/partials/header.hbs
@@ -16,14 +16,14 @@
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container">
-            <a href="/weather" class="navbar-brand">Weather</a>
+            <a href="/app" class="navbar-brand">Weather API</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggle-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="/weather" class="nav-link">Weather</a>
+                        <a href="/app" class="nav-link">Weather</a>
                     </li>
                     <li class="nav-item">
                         <a href="/about" class="nav-link">About</a>
